# ratatui-snake

./: Cargo.toml  LICENSE  README.md
src/: highscore.rs  input.rs
