[package]
name = "snake-tui"
version = "0.1.0"
edition = "2021"
description = "A classic Snake game for the terminal, built in Rust with Ratatui."
license = "MIT"
repository = "https://github.com/axelfrache/snake-tui"
readme = "README.md"
keywords = ["snake", "tui", "game", "terminal", "ratatui"]
categories = ["games", "command-line-utilities"]

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28.1"
anyhow = "1.0.95"
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
